<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="164dp"
        android:layout_height="154dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="111dp"
        app:layout_constraintBottom_toTopOf="@+id/textTitle"
        app:srcCompat="@mipmap/round_logo"
        tools:layout_editor_absoluteX="90dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="212dp"
        android:gravity="center"
        android:text="@string/csd_foundation"
        android:textColor="@color/colorWhite"
        android:textSize="30dp"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="310dp" />

    <TextView
        android:id="@+id/textTagLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="116dp"
        android:gravity="center"
        android:text="@string/tag_line"
        android:textColor="@color/colorWhite"
        android:textSize="22dp" />

</RelativeLayout>