<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    tools:showIn="@layout/app_bar_login">

    <TextView
        android:id="@+id/textViewFranchiseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="110dp"
        android:layout_marginTop="15dp"
        android:text="@string/franchise_name"
        android:textColor="@color/colorFont"
        android:textSize ="@dimen/font_size"
        />

    <TextView
        android:id="@+id/textViewFranchisePassword"
        android:layout_width="147dp"
        android:layout_height="29dp"
        android:layout_below="@id/editTextUserName"
        android:layout_alignEnd="@+id/textViewFranchiseName"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="106dp"
        android:layout_marginTop="218dp"
        android:layout_marginEnd="8dp"
        android:text="@string/franchise_Password"
        android:textColor="@color/colorFont"
        android:textSize="@dimen/font_size" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewFranchisePassword"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textSize="@dimen/font_size" />

    <Button
        android:id="@+id/btnSend"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="255dp"
        android:layout_height="53dp"
        android:layout_alignStart="@+id/textViewFranchiseName"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-63dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="81dp"
        android:background="@color/colorFont"
        android:text="@string/LogIn"
        android:textColor="#FFF"
        android:textSize="@dimen/font_size"
        android:layout_centerInParent="true"
        android:onClick="OnClickSend"
        />

    <Spinner
        android:id="@+id/spinnerOfFranchiseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="80dp"
        android:textSize="@dimen/font_size" />
 </RelativeLayout>